LPS-91293 Apply new styles to the fragments editor toolbar

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentsEditorToolbar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentsEditorToolbar.scss
@@ -1,8 +1,9 @@
 @import "./variables";
 
 .fragments-editor-toolbar {
-	background-color: #6B6C7E;
-	color: #FFF;
+	background-color: #FFF;
+	border-bottom: 1px solid rgba(220, 220, 220, 0.5);
+	color: #6B6C7E;
 	height: $managementBarHeight;
 	left: 0;
 	max-height: $managementBarHeight;
@@ -17,6 +18,18 @@
 	body.open & {
 		left: $sidebarWidth;
 		width: calc(100% - #{$sidebarWidth});
+	}
+
+	button {
+		color: #6B6C7E;
+	}
+
+	button.btn-primary {
+		color: #FFF;
+	}
+
+	button.btn-secondary:hover {
+		color: #6B6C7E;
 	}
 
 	& > .container-fluid {
