LPS-92329 Show home page label using clay badge

--- a/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/miller_columns/LayoutColumn.scss
+++ b/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/miller_columns/LayoutColumn.scss
@@ -58,6 +58,10 @@
 
 .layout-column-item-subtitle {
 	font-weight: normal;
+
+	.label {
+		vertical-align: text-top;
+	}
 }
 
 .layout-drag-handler {
@@ -89,6 +93,10 @@
 
 	.layout-column-item-title {
 		pointer-events: none;
+
+		.badge {
+			vertical-align: bottom;
+		}
 	}
 
 	.layout-column-item-click-mask {
