LPS-92389 HTML standard doesn't allow to includ block elements inside the paragraphs

--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/com/liferay/fragment/collection/contributor/basic/component/dependencies/card/index.html
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/com/liferay/fragment/collection/contributor/basic/component/dependencies/card/index.html
@@ -9,11 +9,11 @@
 				<lfr-editable id="cardTitle00" type="rich-text">Heading Example</lfr-editable>
 			</h3>
 
-			<p class="mt-3">
+			<div class="mt-3">
 				<lfr-editable id="cardContent00" type="rich-text">
 					This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
 				</lfr-editable>
-			</p>
+			</div>
 
 			<button type="button" class="btn btn-secondary">Read More</button>
 		</div>
