--- a/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/main.scss
@@ -3,6 +3,10 @@
 @import "./miller_columns/LayoutColumn";
 
 .portlet-layouts-admin {
+	.add-layout-action-option {
+		cursor: pointer;
+	}
+
 	.customization-settings #main-content {
 		.portlet-column {
 			border: 1px solid #0B5FFF;
