LPS-92697 Get content as field value in case when field is instance of content accessor

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/META-INF/resources/fragment/entry/processor/editable/text_field_template.tmpl
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable/src/main/resources/META-INF/resources/fragment/entry/processor/editable/text_field_template.tmpl
@@ -1,5 +1,7 @@
 [#if field_name??]
-	[#if field_name?is_date_like]
+	[#if contentAccessorUtil.isContentAccessor(field_name)]
+		${field_name.getContent()}
+	[#elseif field_name?is_date_like]
 		${field_name?datetime?string}
 	[#elseif field_name?is_sequence]
 		${field_name?join(", ")}
