LPS-92808 Create alloy editor instance using corresponding language direction property

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentEntryLinkEditables.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentEntryLinkEditables.scss
@@ -62,4 +62,9 @@
 		background-color: fade_out($fragmentEditableFieldGridAccentColor, 0.9);
 		outline: 0;
 	}
+
+	&[dir="rtl"], .cke_contents_rtl {
+		direction: rtl;
+		text-align: right;
+	}
 }
