LPS-92699 Use :before pseudoelement for editable masks

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentEntryLinkEditables.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentEntryLinkEditables.scss
@@ -1,66 +1,58 @@
 @import "variables";
 
 .fragments-editor__editable {
-	box-shadow: inset 0 0 0 1px transparent;
 	cursor: pointer;
 	display: block;
 	min-height: 1em;
 	min-width: 2ch;
 	outline: 0;
 	position: relative;
-	transition: box-shadow ease 0.2s, background-color ease 0.3s;
 
-	&--highlighted,
-	&--highlighted[type="image"]:before {
+	&--highlighted:before {
 		box-shadow: inset 0 0 0 1px $fragmentEntryLinkEditableFieldBorderColor;
 	}
 
-	&--hovered,
-	&--hovered[type="image"]:before {
+	&--hovered:before {
 		box-shadow: inset 0 0 0 1px $fragmentEditableFieldHoverBorderColor;
 	}
 
-	&--active,
-	&--active[type="image"]:before {
+	&--active:before {
 		box-shadow: inset 0 0 0 2px $fragmentEditableFieldActiveBorderColor;
 		outline: none;
 	}
 
-	&--translated,
-	&--translated[type="image"]:before {
+	&--translated:before {
 		background-color: fade_out($fragmentEditableFieldGridTranslatedColor, 0.9);
 	}
 
-	&--mapped,
-	&--mapped[type="image"]:before {
+	&--mapped:before {
 		background-color: fade_out($fragmentEditableFieldGridMappedColor, 0.9);
 		box-shadow: inset 0 0 0 1px fade_out($fragmentEditableFieldGridMappedColor, 0.6);
 	}
 
-	&--mapped.fragments-editor__editable--hovered,
-	&--mapped.fragments-editor__editable--hovered[type="image"]:before {
+	&--mapped.fragments-editor__editable--hovered:before {
 		box-shadow: inset 0 0 0 1px $fragmentEditableFieldGridMappedColor;
 	}
 
-	&--mapped.fragments-editor__editable--active,
-	&--mapped.fragments-editor__editable--active[type="image"]:before {
+	&--mapped.fragments-editor__editable--active:before {
 		box-shadow: inset 0 0 0 2px $fragmentEditableFieldGridMappedColor;
 	}
 
-	&[type="image"] {
-		&:before {
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
+	&:before {
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		transition: box-shadow ease 0.2s, background-color ease 0.3s;
+		width: 100%;
+		z-index: 1;
+	}
 
-		> img {
-			max-width: 100%;
-		}
+	&[type="image"] > img {
+		max-width: 100%;
 	}
 
 	.cke_editable {
